--- a/Donde estan los ojos.ipynb
+++ b/Donde estan los ojos.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Regresión I: ¿Donde estan los ojos?\n",
     "\n",
@@ -37,21 +36,31 @@
     "2. Un notebook de Jupyter donde presentan todo el pipeline para el entrenamiento de la red. Cada parte debe ser explicada. No pido en esta ocasión un informe aparte, pero debe explicar muy bien el proceso en el notebook (una introducción, métodos, resultados y discusión, y conclusiones).\n",
     "3. El notebook debe incluir una función que permita ingresar una muestra de entrada y se proporcione la salida, sin más pasos intermedios. Por lo tanto en esta función se debe tener en cuenta el acondicionamiento de los datos, antes de ser introducidos en la red neuronal para realizar las predicciones.\n",
     "4. El notebook debe incluir las respuestas a las preguntas planteadas."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Solución"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "prueba commit camila"
+   ],
+   "outputs": [],
+   "metadata": {}
   }
  ],
  "metadata": {
